--- a/style.css
+++ b/style.css
@@ -1,4 +1,62 @@
-.footer{
-  margin-left : 80px;
-  font-size : 18px;
+#grid-container {
+  display: grid;
+  justify-content: center;
+  gap: 20px;
+}
+
+.value {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 19rem;
+  width: 10rem;
+  padding: 1rem;
+}
+
+#grid-container .value {
+  border: 2px solid rgb(94, 91, 91);
+  box-shadow: 2px 2px 6px rgb(184, 180, 180);
+  border-radius: 5%;
+}
+
+#grid-container div img {
+  width: 40%;
+  height: 60%;
+}
+
+#super1 {
+  grid-column: 2;
+  grid-row: 2/4;
+}
+#super2 {
+  grid-column: 3;
+  grid-row: 2 / 4;
+}
+#super3 {
+  grid-column: 5;
+  grid-row: 2 / 4;
+}
+#super4 {
+  grid-column: 6;
+  grid-row: 2/4;
+}
+
+#score {
+  grid-column: 4;
+  grid-row: 2/4;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  margin: 1rem;
+}
+
+.number {
+  font-size: 2.8rem;
+  font-weight: 700;
+}
+
+.name {
+  font-size: 2.2rem;
+  font-weight: 400;
 }
